syntax = "proto3";

option go_package = "github.com/Nabeeha-Mudassir/RideBookingService/bookings";
import "google/protobuf/timestamp.proto";
service BookingService {
  rpc GetBooking (GetBookingRequest) returns (GetBookingResponse) {}
  rpc CreateBooking (CreateBookingRequest) returns (CreateBookingResponse) {}
  rpc UpdateRide (RideRequest) returns (RideResponse) {}
}
message Ride {
  	int32 ride_id = 1;
	string source = 2;
	string destination = 3;
	int32 distance = 4;
	int32 cost = 5;
	
}
message Booking {
	int32 booking_id = 1;
	int32 ride_id = 2;
  	int32 user_id = 3;
	google.protobuf.Timestamp ride_time = 4;
}
message CreateBookingRequest {
  	int32 user_id = 1;
	Ride ride = 2;
}
message CreateBookingResponse {
  	Booking booking = 1;
}

message GetBookingRequest {
  	int32 booking_id = 1;
}
message GetBookingResponse {
  	Booking booking = 1;
}
message RideRequest{
	int32 ride_id = 1;
	Ride ride = 2;

}
message RideResponse{
	string message = 1;
}